--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,15 +45,16 @@ set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/output/bin/${Configuratio
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/mediasdk)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/example/DuiLib)
 
-# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/example/audio_capture)
-# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/example/local_log)
-# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/example/camera_capture)
-# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/example/h264_analyzer)
-# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/example/screen_capture)
-# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/example/video_decoder)
-# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/example/video_encoder)
-# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/example/video_render)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/example/audio_capture)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/example/local_log)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/example/camera_capture)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/example/h264_analyzer)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/example/screen_capture)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/example/video_decoder)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/example/video_encoder)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/example/video_render)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/example/media_sdk_demo)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/example/media_server_demo)
-# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/example/socket_client)
-# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/example/socket_server)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/example/socket_client)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/example/socket_server)
+# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/example/loopback_demo)
